# report-automator

./: .gitignore  README.md  main.py  pyproject.toml
assets/: template.xlsx
docs/: CONFIG_SCHEMA.md  REQUIREMENTS.md  SYSTEM_FLOW.md  UI_UX_SPEC.md
src/app/core/: config_models.py  constants.py  logger.py  report_builder.py  report_service.py  validator.py
src/app/infra/: config_manager.py  excel_handler.py  excel_loader.py  template_manager.py
src/app/ui/components/: file_selector.py  footer.py  header.py  log_view.py  mapping_table.py  processing_panel.py
src/app/ui/components/groups/: contract_period_group.py  coordinates_group.py  mapping_group.py
src/app/ui/components/layout/: footer.py  header.py
src/app/ui/components/panels/: config_panel.py  control_panel.py  extraction_panel.py  ingestion_panel.py
src/app/ui/components/widgets/: file_selector.py  log_view.py
src/app/ui/controllers/: app_controller.py
src/app/ui/styles/: global.qss  main.qss  panels.qss
src/app/ui/utils/: thread_manager.py
src/app/ui/windows/: main_window.py
src/app/ui/workers/: processor_worker.py  validation_worker.py
tests/integration/: test_excel_handler.py  test_report_builder.py
tests/unit/: test_app_controller.py  test_config_manager.py  test_error_scenarios.py  test_processor.py  test_report_service.py  test_validation_worker.py  test_workers.py
