[project]
name = "report-automator"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "PySide6>=6.0.0",
    "openpyxl>=3.1.0",
    "pandas>=2.0.0",
    "pyinstaller>=6.0.0",
]

[dependency-groups]
dev = [
    "pytest>=9.0.3",
    "pytest-cov>=7.1.0",
    "pytest-mock>=3.15.1",
    "pytest-qt>=4.5.0",
    "tomli-w>=1.2.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
addopts = "-v --tb=short --cov=src --cov-report=term-missing"

[tool.coverage.run]
omit = [
    "*/__init__.py",
    "src/app/core/logger.py"
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if __name__ == .__main__.:",
    "raise NotImplementedError",
    "pass",
    "except Exception as e:"
]
